2012-04-26 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Bundles/OSS/GNUmakefile.preamble
	  only link against libossaudio on OpenBSD
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GNUmakefile.preamble use pkg-config to find the goom libraries
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Add the Sndio Output Bundle, still work in progress
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Bundles/Esound/EsoundPreference.m include NSDictionary.h
	* CynthiuneController.m do not include nonexisting header
	* CynthiuneAnimatedImageView.m, CynthiunePauseButton.m,
	  CynthiuneSongTitleCell.m add [super dealloc]
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Frameworks/Cynthiune/GNUmakefile.preamble diable mcheck
	* Frameworks/Cynthiune/NSCellExtensions.m include NSFoundation.h
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* SongInspectorController.m disable LibMusicBrainz for now
	* GNUmakefile, GNUmakefile.preamble disable mcheck, and 
	  libmusicbrainz, and add Sndio bundle if statement
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* PlaylistController.m fix opening open Panel
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* GeneralPreference.m make Sndio backend the default on OpenBSD
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Bundles/FLAC/FLAC.* update to newer FLAC API
	* Bundles/FLAC/FLACTags.m update to newer FLAC API
2012-03-25 Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* BundleManager.m make it find Cynthiunes bundles, and simplify
	  some while loops
	* Bundles/*/GNUmakefile install bundles in right location
	* Bundles/*/GNUmakefile.preamble do not link against mcheck when
	  debug flag is set
2012-03-25  Sebastian Reitenbach <sebastia@l00-bugdead-prods.de>
	* Initial Import to GAP CVS
2006-03-31  Wolfgang Sourdeau  <Wolfgang@Contre.COM>

	* GNUmakefile: release 0.9.5.
